test/invalid/TestUndeclaredMethod/TestUndeclaredMethod.plume

/**
 * 
 * @author 37029, Juliana Franco
 *
 */
class TestUndeclaredMethod extends Object is
	
  method main : () -> String is
    metodoQueNaoExiste()
